# tehnopark_c_cpp_hw1

./: CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
include/: Team.h
linters/: run.sh
source/: Team.c  input.c  main.c
tests/: CMakeLists.txt  test.cpp
